<resources>
    <string name="limit_size">Attachment vượt quá giới hạn 5MB</string>
    <string name="image_tag">[IMG]</string>
    <string-array name="select_image_items_clear">
        <item>Camera</item>
        <item>Galary</item>
        <item>Xóa ảnh</item>
    </string-array>
    <string-array name="select_image_items">
        <item>Camera</item>
        <item>Galary</item>
    </string-array>
    <string name="select_type">Chọn từ</string>
    <string name="no_network_connection_toast">No network</string>
    <string name="perform_action">Thao tác</string>
    <string name="format">Gửi từ %s của tôi</string>
	<string name="host_name">GetGreen</string>
    <string name="app_name">GetGreen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
	<string name="require_login">Bạn cần phải đăng nhập!</string>
	<string name="years_old">Tuổi: </string>
	<string name="user_date_birth">Sinh nhật:</string>
	<string name="hiden">bị ẩn</string>
    <string-array name="nav_drawer_items_not_signin">
        <item>Trang nhất</item>
        <item>Đăng nhập</item>
        <item>Thông báo</item>
        <item>Theo dõi</item>
        <item>Diễn đàn</item>
        <item>Hộp thư</item>
        <item>Bài mới</item>
        <item>Tìm kiếm</item>
        <item>Thành viên</item>
    </string-array>
    <string-array name="dropdown_threads">
        <item>@string/forumnavigateactivity_menu_newtopic</item>
        <item>@string/forumnavigateactivity_menu_refresh</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Trang nhất</item>
        <item>Đăng nhập</item>
        <item>Diễn đàn</item>
        <item>Tìm kiếm</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="text">Nội dung</string>
    <string name="enter_text_here">Nhập văn bản vào đây</string>
    <string name="edit_bottom_text">Chỉnh sửa văn bản dưới cùng</string>
    <string name="night_enhance_label">Ban đêm</string>
    <string name="revert_dialog_title">Trở về nguyên bản?</string>
    <string name="red_eye">Mắt đỏ</string>
    <string name="tool_name">Aviary</string>
    <string name="generic_error_title">Lỗi</string>
    <string name="saturation">Bão hòa</string>
    <string name="error_download_image_message">Đã xảy ra lỗi khi tải xuống hình ảnh, vui lòng thử lại sau</string>
    <string name="get_more">Tải thêm</string>
    <string name="effects">Hiệu ứng</string>
    <string name="feather_close">Đóng</string>
    <string name="blemish">Làm trầy</string>
    <string name="brightness">Độ sáng</string>
    <string name="remove">Xóa</string>
    <string name="revert_dialog_message">Bạn sắp mất tất cả những thay đổi bạn đã thực hiện. Bạn có chắc muốn trở về hình ảnh nguyên bản không?</string>
    <string name="enhance">Tăng cường</string>
    <string name="tool_leave_question">Bạn có chắc muốn hủy bỏ những thay đổi khỏi công cụ này không?</string>
    <string name="whiten">Làm trắng</string>
    <string name="square">Vuông</string>
    <string name="crop">Cắt</string>
    <string name="mirror">Phản chiếu</string>
    <string name="confirm">Xác nhận</string>
    <string name="yes_leave">Thoát trình sửa ảnh</string>
    <string name="feather_standalone_editor">Trình sửa ảnh</string>
    <string name="adjust">Hướng</string>
    <string name="back_enhance_label">Ngược sáng</string>
    <string name="contrast">Tương phản</string>
    <string name="attention">Lưu ý</string>
    <string name="feather_delete">Xóa</string>
    <string name="sticker_pack_updated_1">Gói nhãn dán đã được cập nhật. Nhấp ok để tải lại danh sách gói</string>
    <string name="sticker_pack_updated_2">Gói nhãn dán đã được cập nhật. Chúng tôi cần tải lại bảng điều khiển hiện tại</string>
    <string name="sticker_pack_updated_3">Gói nhãn dán đã được cập nhật. Chúng tôi cần tải lại bảng điều khiển hiện tại. Bạn có muốn áp dụng nhãn dán hiện tại không?</string>
    <string name="filter_pack_updated">Gói bộ lọc đã được cập nhật. Nhấp ok để tải lại danh sách gói</string>
    <string name="infoscreen_submit">Tìm hiểu thêm!</string>
    <string name="edit_your_photo">Trình sửa ảnh</string>
    <string name="apply">Áp dụng</string>
    <string name="auto_enhance_label">Tự động</string>
    <string name="menu_reset">Thiết lập lại</string>
    <string name="infoscreen_bottom_button">Giới thiệu về trình sửa ảnh</string>
    <string name="custom">Tùy chỉnh</string>
    <string name="sharpen">Độ sắc nét</string>
    <string name="meme">Trào lưu</string>
    <string name="sticker_delete_message">Bạn có chắc muốn xóa nhãn dán này không?</string>
    <string name="tool">Công cụ</string>
    <string name="rotate">Xoay</string>
    <string name="filter_name">Miễn phí</string>
    <string name="feather_tool_temperature">Ấm áp</string>
    <string name="feather_loading_title">Đang tải</string>
    <string name="save">Xong</string>
    <string name="balance_enhance_label">Cân bằng</string>
    <string name="border_name">Miễn phí</string>
    <string name="loading_image">Đang tải hình ảnh...</string>
    <string name="effect_loading_message">Áp dụng hiệu ứng</string>
    <string name="confirm_quit_message">Xin đợi! Bạn chưa lưu tác phẩm của mình. Bạn có chắc muốn đóng trình sửa ảnh này không?</string>
    <string name="stickers">Nhãn dán</string>
    <string name="menu_cancel">Hủy</string>
    <string name="keep_editing">Tiếp tục chỉnh sửa</string>
    <string name="feather_update">Cập nhật</string>
    <string name="infoscreen_text">Aviary là một SDK miễn phí dành cho iOS và Android, cho phép bạn thêm khả năng chỉnh sửa ảnh và các hiệu ứng vào ứng dụng của mình chỉ với vài dòng mã.</string>
    <string name="draw">Vẽ</string>
    <string name="menu_premium">Cửa hàng</string>
    <string name="feather_borders">Khung</string>
    <string name="zoom_mode">Chế độ thu phóng</string>
    <string name="edit_top_text">Chỉnh sửa văn bản trên cùng</string>
    <string name="sticker_name">Bản giới thiệu</string>
    <string name="original">Gốc</string>
    <string name="testopen">open</string>
    <string name="testclose">close</string>
    <string name="upload_avatar">Thay đổi</string>
    <string name="search_hint">nhập ít nhất 3 ký tự</string>
    <string name="search_key_too_short">Please enter at least 3 characters</string>
    <string name="search_invoke">App/tìm kiếm/gọi tìm kiếm</string>
    <string name="reply_post">Trả lời</string>
    <string name="widgetselector_title">Chọn một diễn đàn để thêm widget</string>
    <string name="shortcutselector_title">Chọn một diễn đàn để thêm lối tắt</string>
    <string name="notificationactivity_title_top">Đăng ký thông báo</string>
    <string name="notificationactivity_title_bottom">Gừi thông báo đến tôi khi có người</string>
    <string name="notification_flag">Receive Notifications</string>
    <string name="notification_photo_and_attachment">Photo Editor</string>
    <string name="perfernence_sign_flag_title">Tapatalk Signature</string>
    <string name="perfernence_sign_customer_flag_title">Tùy chỉnh</string>
    <string name="tapatalk_singature_1">Không có</string>
    <string name="tapatalk_singature_2">Sent from my %s using Tapatalk</string>
    <string name="tapatalk_singature_4">Tùy chỉnh</string>
    <string name="tapatalk_singature_5">Sent from my %s using</string>
    <string name="prefix_1">Không có tiền tố\"</string>
    <string name="prefix_2">Chỉ trong đề tài</string>
    <string name="prefix_3">Chỉ trong chủ đề</string>
    <string name="prefix_4">Cả đề tài và chủ đề</string>
    <string name="fullimage_save_msg">Lưu vào</string>
    <string name="insert_url">Nhập URL</string>
    <string name="createpmactivity_updatepm_error">Failed to send message. If this problem persists, contact your forum administrator.</string>
    <string name="createpmactivity_re">Re:</string>
    <string name="createpmactivity_fwd">Fwd:</string>
    <string name="createpmactivity_message_content_not_be_empty">Message content can not be empty. Please try again.</string>
    <string name="createpmactivity_message_subject_not_be_empty">Message subject can not be empty. Please try again.</string>
    <string name="createpmactivity_recipient_not_be_empty">Recipient can not be empty. Please try again.</string>
    <string name="createtopicactivity_content_not_be_empty">Post content can not be empty. Please try again.</string>
    <string name="createtopicactivity_subject_not_be_empty">Post subject can not be empty. Please try again.</string>
    <string name="category_total">Tổng số %s diễn đàn</string>
    <string name="userinfoactivity_send_msg_to">Gửi tin nhắn đến</string>
    <string name="userinfoactivity_view_1">Hiển thị</string>
    <string name="userinfoactivity_view_2">- Bài viết</string>
    <string name="userinfoactivity_view_3">- Chủ đề</string>
    <string name="favoriteactivity_nothing_to_update">Không có gì để Cập Nhật.</string>
    <string name="favoriteactivity_remove_notice">Are you sure to delete this account?</string>
    <string name="dlg_open_button">Mở</string>
    <string name="dlg_positive_button">OK</string>
    <string name="dlg_save_button">Lưu</string>
    <string name="forumnavigateactivity_menu_newtopic">Chủ đề mới</string>
    <string name="forumnavigateactivity_menu_search">Tìm kiếm</string>
    <string name="forumnavigateactivity_menu_refresh">Làm mới</string>
    <string name="forumnavigateactivity_menu_reply_pm">Reply</string>
    <string name="forumnavigateactivity_menu_reply_pm_all">Trả lời tất cả</string>
    <string name="forumnavigateactivity_menu_new_pm">Tạo PM</string>
    <string name="forumnavigateactivity_menu_forward_pm">Chuyển tiếp</string>
    <string name="forumnavigateactivity_menu_reply_no_quote">Trả lời không trích dẫn</string>
    <string name="forumnavigateactivity_menu_reply_all_no_quote">Trả lời tất cả không trích</string>
    <string name="forumnavigateactivity_menu_report_pm">Báo cáo</string>
    <string name="upload_from">Pick a source</string>
    <string name="upload_forum_menu">Attach</string>
    <string name="upload_tapatalk_menu">Ảnh</string>
    <string name="forumnavigateactivity_menu_subscribe">Theo dõi</string>
    <string name="forumnavigateactivity_url">Nhập URL</string>
    <string name="forumnavigateactivity_guest">Khách</string>
    <string name="forumnavigateactivity_invalid_user">You have either entered an invalid username/password, or your administrator has restricted access via Tapatalk.</string>
    <string name="forumnavigateactivity_dlg_item_view">Xem hồ sơ của người gửi</string>
    <string name="topics">Bài viết</string>
    <string name="forums">Diễn đàn</string>
    <string name="forumnavigateactivity_dlg_item_subscribeforum">Theo dõi</string>
    <string name="forumnavigateactivity_dlg_item_unsubscribeforum">Bỏ theo dõi</string>
    <string name="username">Tên người dùng</string>
    <string name="signinusername">Tên người dùng</string>
    <string name="password">Mật khẩu</string>
    <string name="new_post_discard">Loại bỏ</string>
    <string name="submit">Chấp nhận</string>
    <string name="New_PM_Message_1">"Tới: Nhiều tên cách nhau với ';'"</string>
    <string name="Subject">Tiêu đề</string>
    <string name="register_button">Đăng ký</string>
    <string name="conversation_send_button">Gửi</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="write_new_hint">Body</string>
    <string name="join">Tham gia</string>
</resources>