<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@id/regist_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="35.0dip" >

        <vn.getgreen.view.GEditText
            android:id="@id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/username"
            android:textSize="16.0sp" />

        <vn.getgreen.view.GEditText
            android:id="@id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16.0sp" />

        <vn.getgreen.view.GEditText
            android:id="@id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16.0sp" />

        <vn.getgreen.view.GEditText
            android:id="@id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginTop="10.0dip"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone|flagNoEnterAction"
            android:inputType="textPassword"
            android:textSize="16.0sp" />

        <vn.getgreen.view.GButton
            android:id="@id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_marginRight="35.0dip"
            android:layout_marginTop="10.0dip"
            android:text="@string/register_button"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/all_white"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>