<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/conv_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:minHeight="200.0px"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_gravity="top"
        android:layout_weight="1.0"
        android:fillViewport="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@id/conv_main"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical" >

            <vn.getgreen.view.GEditText
                android:id="@id/conv_msgto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:gravity="center_vertical"
                android:hint="@string/New_PM_Message_1"
                android:singleLine="true"
                android:textSize="18.0sp" />

            <vn.getgreen.view.GEditText
                android:id="@id/conv_msgsubject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:gravity="center_vertical"
                android:hint="@string/Subject"
                android:inputType="textCapSentences|textAutoCorrect"
                android:singleLine="true"
                android:textSize="18.0sp" />

            <vn.getgreen.view.GEditText
                android:id="@id/conv_msgcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:gravity="top|left|center"
                android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
                android:text=""
                android:textSize="18.0sp" />

            <CheckBox
                android:id="@id/signature_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:checked="true"
                android:maxLines="2"
                android:visibility="visible" />

            <vn.getgreen.view.GTextView
                android:id="@id/conv_attachsectiontitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5.0dip"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@id/conv_attachlay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/conv_attachlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="2.0dip"
        android:visibility="gone" >

        <vn.getgreen.view.GButton
            android:id="@id/conv_submit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/conversation_send_button"
            android:textSize="14.0dip" />

        <vn.getgreen.view.GButton
            android:id="@id/conv_discard_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/new_post_discard"
            android:textSize="14.0dip" />

        <ImageButton
            android:id="@id/conv_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_camera" />

        <ImageButton
            android:id="@id/conv_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_link" />

        <ImageButton
            android:id="@id/conv_smile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_smile"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@id/conv_foot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</LinearLayout>