<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical" 
    android:background="#2D912E">

    <RelativeLayout
        android:id="@id/regist_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35.0dip"
        android:scrollbars="vertical"
        android:visibility="visible"
         >

        <!-- <LinearLayout
            android:id="@id/buttonlay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:id="@id/googlebutton"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/googlesigninselector"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_google" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/twitterbutton"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/twittersigninselector"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_twitter" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/facebookbutton"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/facebooksigninselector"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_facebook" />
            </LinearLayout>
        </LinearLayout> -->

        <TextView
            android:id="@id/ortext"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_below="@id/buttonlay"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:gravity="center"
            android:text="OR"
            android:textColor="#ff898989"
            android:textSize="16.0sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ortext"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:hint="@string/signinusername"
            android:textColorHint="@color/hint_color"
            android:inputType="text"
            android:textColor="@color/all_white"
            android:textSize="16.0sp" />

        <EditText
            android:id="@id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="8.0dip"
            android:hint="@string/password"
            android:textColorHint="@color/hint_color"
            android:imeOptions="actionDone"
            android:textColor="@color/all_white"
            android:inputType="textPassword"
            android:textSize="16.0sp" />

        <LinearLayout
            android:id="@id/buttonlay11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="10.0dip"
            android:orientation="vertical" >

            <vn.getgreen.view.GButton
                android:id="@id/sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:gravity="center"
                android:textColor="#ff3b3b3b"
                android:textSize="14.0sp"
                android:textStyle="bold" />

            <vn.getgreen.view.GButton
                android:id="@id/create_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:gravity="center"
                android:textColor="#ff3b3b3b"
                android:textSize="14.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@id/tapa_id_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonlay11"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="34.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="2.0dip"
            android:autoLink="web"
            android:textColor="#ff3b3b3b"
            android:textSize="14.0sp" />
    </RelativeLayout>

</ScrollView>