<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="2.0dip" >

    <ScrollView
        android:id="@id/scrollwrap"
        android:layout_width="fill_parent"
        android:layout_height="0.0px"
        android:layout_weight="1.0"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@id/prefix"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingLeft="5.0sp"
                android:paddingRight="5.0sp"
                android:textSize="15.0sp"
                android:visibility="gone" />

            <vn.getgreen.view.GEditText
                android:id="@id/editsubject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_below="@id/prefix"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:hint="Subject"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textAutoCorrect|textImeMultiLine"
                android:maxLines="2" />

            <vn.getgreen.view.GEditText
                android:id="@id/editcontent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:gravity="top"
                android:hint="@string/write_new_hint"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoEnterAction"
                android:inputType="textLongMessage|textCapSentences|textAutoCorrect|textMultiLine"
                android:textSize="18.0sp" />

            <CheckBox
                android:id="@id/signature_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:layout_marginTop="15.0dip"
                android:checked="true"
                android:maxLines="2"
                android:visibility="visible" />

            <TextView
                android:id="@id/attachsectiontitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@id/attachlay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="2.0dip"
        android:visibility="gone" >

        <vn.getgreen.view.GButton
            android:id="@id/submit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/submit"
            android:textSize="14.0dip" />

        <vn.getgreen.view.GButton
            android:id="@id/discard_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/new_post_discard"
            android:textSize="14.0dip" />

        <ImageButton
            android:id="@id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_camera" />

        <ImageButton
            android:id="@id/link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_link" />

        <ImageButton
            android:id="@id/smile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_smile"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@id/foot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</LinearLayout>